--- a/express-e-commerce-app/package.json
+++ b/express-e-commerce-app/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.8.2",
-    "graphql": "^16.5.0"
+    "graphql": "^16.5.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
