:sparkles: prisma環境のセットアップ

--- a/social-app-with-prisima/server/package.json
+++ b/social-app-with-prisima/server/package.json
@@ -5,7 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "nodemon --watch './**/*.ts' --exec 'ts-node' src/index.ts"
+    "start:dev": "nodemon --watch './**/*.ts' --exec 'ts-node' src/index.ts",
+    "prisma:studio": "prisma studio",
+    "prisma:db:push": "prisma db push",
+    "prisma:format": "prisma format",
+    "prisma:migrate:dev": "prisma migrate dev",
+    "prisma:generate": "prisma generate",
+    "prisma:reset": "prisma migrate reset"
   },
   "keywords": [],
   "author": "",
