--- a/social-app-with-prisima/server/package.json
+++ b/social-app-with-prisima/server/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "nodemon --watch './**/*.ts' --exec 'ts-node' src/index.ts",
+    "prisma:init": "prisma init",
     "prisma:studio": "prisma studio",
     "prisma:db:push": "prisma db push",
     "prisma:format": "prisma format",
