--- a/social-app-with-prisima/server/package.json
+++ b/social-app-with-prisima/server/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "format": "prettier --write ./src",
     "start:dev": "nodemon --watch './**/*.ts' --exec 'ts-node' src/index.ts",
     "prisma:init": "prisma init",
     "prisma:studio": "prisma studio",
@@ -30,6 +31,7 @@
     "validator": "^13.6.0"
   },
   "devDependencies": {
+    "prettier": "^2.7.0",
     "prisma": "^3.3.0",
     "ts-node": "^10.8.1",
     "ts-node-dev": "^1.1.8",
