Nest. Prisma, GraphQlの確認ブログをセットアップ

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
   "eslint.workingDirectories": [
     "./express-e-commerce-app",
-    "./nest-e-commerce-app"
+    "./nest-e-commerce-app",
+    "./graphql-nest-prisma",
+    "./nest-graphql-prisma",
+    "./employee-gql-service"
   ]
 }
